--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          USERNAME: vallzin
+          USERNAME: "vallzin"
           CALC_MODE: "true"
           IMAGE_OUTPUT: "./profile-3d-contrib"
       - name: Commit & Push
